examples/errors/typo.tex
\documentclass{article}
\begin{document}
Das Kommando \textb{fett}.
\end{document}
